# todo-django-render

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
static/css/: styles.css
todo_app/: admin.py  models.py  urls.py  views.py
todo_app/migrations/: 0001_initial.py
todo_app/templates/: base.html
todo_app/templates/todo_app/: todo_add.html  todo_list.html
todo_project/: settings.py  urls.py
