[tool.poetry]
name = "todo-project"
version = "0.1.0"
description = ""
authors = ["Ricardo Portela <ricaportela@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2.12"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
